# biking_api

./: .env  .flake8  Dockerfile  Dockerfile.test  README.md  assignment.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  conftest.py  crud.py  dependencies.py  main.py  models.py  plans.py  schemas.py  test_main.py
app/api/: main.py
app/api/api_v1/endpoints/: amortization.py  bikes.py
app/api/routes/: amortization.py  bikes.py
app/core/: config.py  db.py  dependencies.py
data/: dump.sql
data/create_scripts/: bikes.sql  organisations.sql
data/dump_scripts/: bikes.sql  organisations.sql
tests/: conftest.py  test_amortization.py  test_bikes.py  test_config.py  test_crud.py  test_integration.py  test_main.py
tests/api/routes/: test_amortization.py  test_bikes.py
tests/core/: dump.sql  test_config.py  test_db.py
