[tool.poetry]
name = "backend_assignment"
version = "1.2.0"
description = "Vapaus backend assignment"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
sqlalchemy = "^2.0.29"
sqlmodel = "^0.0.16"
sqlalchemy-utils = "^0.41.2"
psycopg2 = "^2.9.9"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.29.0"}


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
